Pranjal | Rename method and class